mytest-project/templates/services.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-frontend
spec:
  selector:
    app: frontend
  ports:
    - port: 80
      targetPort: 80
  type: NodePort
