mytest-project/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-dep
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: "myfirst-web.com"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: nginx-dep
            port:
              number: 80
      - path: /frontend
        pathType: Prefix
        backend:
          service:
            name: nginx-frontend
            port:
              number: 80
